[gd_scene load_steps=6 format=2]

[ext_resource path="res://Ui/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://Ui/Blocktopia.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Tilesets/HillsTileset2.tres" type="TileSet" id=5]
[ext_resource path="res://Scripts/StartMenu.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_bottom = -3
extra_spacing_char = 1
font_data = ExtResource( 2 )

[node name="StartMenu" type="Control"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme = ExtResource( 1 )
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -131078, 5, 0, -131077, 5, 0, -131076, 5, 0, -131075, 5, 0, -131074, 5, 0, -131073, 5, 0, -196608, 5, 0, -196607, 5, 0, -196606, 5, 0, -196605, 5, 0, -196604, 5, 0, -196603, 5, 0, -196602, 5, 0, -196601, 5, 0, -196600, 5, 0, -196599, 5, 0, -196598, 5, 0, -196597, 5, 0, -196596, 5, 0, -196595, 5, 0, -196594, 5, 0, -196593, 5, 0, -196592, 5, 0, -196591, 5, 0, -196590, 5, 0, -196589, 5, 0, -196588, 5, 0, -196587, 5, 0, -196586, 5, 0, -196585, 5, 0, -196584, 5, 0, -196583, 5, 0, -65542, 5, 0, -65541, 5, 0, -65540, 5, 0, -65539, 30, 0, -65538, 20, 0, -65537, 20, 0, -131072, 20, 0, -131071, 20, 0, -131070, 20, 0, -131069, 20, 0, -131068, 20, 0, -131067, 20, 0, -131066, 20, 0, -131065, 20, 0, -131064, 20, 0, -131063, 20, 0, -131062, 20, 0, -131061, 20, 0, -131060, 20, 0, -131059, 20, 0, -131058, 20, 0, -131057, 20, 0, -131056, 20, 0, -131055, 20, 0, -131054, 20, 0, -131053, 20, 0, -131052, 20, 0, -131051, 20, 0, -131050, 20, 0, -131049, 31, 0, -131048, 5, 0, -131047, 5, 0, -6, 5, 0, -5, 5, 0, -4, 5, 0, -3, 24, 0, -65513, 17, 0, -65512, 5, 0, -65511, 5, 0, 65530, 5, 0, 65531, 5, 0, 65532, 5, 0, 65533, 24, 0, 7, 16, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 25, 0, 23, 17, 0, 24, 5, 0, 25, 5, 0, 131066, 5, 0, 131067, 5, 0, 131068, 5, 0, 131069, 32, 0, 131070, 1, 0, 131071, 25, 0, 65537, 16, 0, 65538, 25, 0, 65540, 26, 0, 65542, 16, 0, 65543, 33, 0, 65544, 5, 0, 65545, 5, 0, 65546, 5, 0, 65547, 5, 0, 65548, 5, 0, 65549, 32, 0, 65550, 25, 0, 65553, 16, 0, 65554, 1, 0, 65555, 25, 0, 65559, 17, 0, 65560, 5, 0, 65561, 5, 0, 196602, 5, 0, 196603, 5, 0, 196604, 5, 0, 196605, 5, 0, 196606, 30, 0, 196607, 23, 0, 131073, 18, 0, 131074, 23, 0, 131076, 28, 0, 131078, 18, 0, 131079, 31, 0, 131080, 5, 0, 131081, 5, 0, 131082, 5, 0, 131083, 5, 0, 131084, 5, 0, 131085, 30, 0, 131086, 23, 0, 131089, 18, 0, 131090, 31, 0, 131091, 24, 0, 131094, 16, 0, 131095, 33, 0, 131096, 5, 0, 131097, 5, 0, 262138, 5, 0, 262139, 5, 0, 262140, 5, 0, 262141, 5, 0, 262142, 24, 0, 196615, 18, 0, 196616, 20, 0, 196617, 20, 0, 196618, 20, 0, 196619, 20, 0, 196620, 20, 0, 196621, 23, 0, 196626, 17, 0, 196627, 24, 0, 196630, 17, 0, 196631, 5, 0, 196632, 5, 0, 196633, 5, 0, 327674, 5, 0, 327675, 5, 0, 327676, 5, 0, 327677, 5, 0, 327678, 24, 0, 262162, 18, 0, 262163, 23, 0, 262166, 17, 0, 262167, 5, 0, 262168, 5, 0, 262169, 5, 0, 393210, 5, 0, 393211, 5, 0, 393212, 5, 0, 393213, 5, 0, 393214, 24, 0, 327702, 17, 0, 327703, 5, 0, 327704, 5, 0, 327705, 5, 0, 458746, 5, 0, 458747, 5, 0, 458748, 5, 0, 458749, 5, 0, 458750, 24, 0, 393238, 17, 0, 393239, 5, 0, 393240, 5, 0, 393241, 5, 0, 524282, 5, 0, 524283, 5, 0, 524284, 5, 0, 524285, 5, 0, 524286, 24, 0, 458774, 17, 0, 458775, 5, 0, 458776, 5, 0, 458777, 5, 0, 589818, 5, 0, 589819, 5, 0, 589820, 5, 0, 589821, 5, 0, 589822, 24, 0, 589823, 1, 0, 524288, 1, 0, 524289, 2, 0, 524303, 12, 0, 524304, 13, 0, 524305, 13, 0, 524306, 13, 0, 524307, 13, 0, 524308, 1, 0, 524309, 1, 0, 524310, 17, 0, 524311, 5, 0, 524312, 5, 0, 524313, 5, 0, 655354, 5, 0, 655355, 5, 0, 655356, 5, 0, 655357, 5, 0, 655358, 24, 0, 655359, 9, 0, 589824, 9, 0, 589825, 10, 0, 589844, 8, 0, 589845, 9, 0, 589846, 17, 0, 589847, 5, 0, 589848, 5, 0, 589849, 5, 0, 720890, 5, 0, 720891, 5, 0, 720892, 5, 0, 720893, 5, 0, 720894, 24, 0, 655382, 17, 0, 655383, 5, 0, 655384, 5, 0, 655385, 5, 0, 786426, 5, 0, 786427, 5, 0, 786428, 5, 0, 786429, 5, 0, 786430, 24, 0, 720897, 0, 0, 720898, 1, 0, 720899, 1, 0, 720900, 2, 0, 720913, 16, 0, 720914, 25, 0, 720918, 17, 0, 720919, 5, 0, 720920, 5, 0, 720921, 5, 0, 851962, 5, 0, 851963, 5, 0, 851964, 5, 0, 851965, 5, 0, 851966, 24, 0, 786433, 4, 0, 786434, 5, 0, 786435, 5, 0, 786436, 6, 0, 786449, 17, 0, 786450, 24, 0, 786454, 17, 0, 786455, 5, 0, 786456, 5, 0, 786457, 5, 0, 917498, 5, 0, 917499, 5, 0, 917500, 5, 0, 917501, 5, 0, 917502, 32, 0, 917503, 1, 0, 851968, 1, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 33, 0, 851986, 32, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 33, 0, 851991, 5, 0, 851992, 5, 0, 851993, 5, 0, 983034, 5, 0, 983035, 5, 0, 983036, 5, 0, 983037, 5, 0, 983038, 5, 0, 983039, 5, 0, 917504, 5, 0, 917505, 5, 0, 917506, 5, 0, 917507, 5, 0, 917508, 5, 0, 917509, 5, 0, 917510, 5, 0, 917511, 5, 0, 917512, 5, 0, 917513, 5, 0, 917514, 5, 0, 917515, 5, 0, 917516, 5, 0, 917517, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 917527, 5, 0, 917528, 5, 0, 917529, 5, 0, 1048570, 5, 0, 1048571, 5, 0, 1048572, 5, 0, 1048573, 5, 0, 1048574, 5, 0, 1048575, 5, 0, 983040, 5, 0, 983041, 5, 0, 983042, 5, 0, 983043, 5, 0, 983044, 5, 0, 983045, 5, 0, 983046, 5, 0, 983047, 5, 0, 983048, 5, 0, 983049, 5, 0, 983050, 5, 0, 983051, 5, 0, 983052, 5, 0, 983053, 5, 0, 983054, 5, 0, 983055, 5, 0, 983056, 5, 0, 983057, 5, 0, 983058, 5, 0, 983059, 5, 0, 983060, 5, 0, 983061, 5, 0, 983062, 5, 0, 983063, 5, 0, 983064, 5, 0, 983065, 5, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="CenterContainer" parent="."]
anchor_right = 1.0
margin_right = 0.200012
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Top"]
margin_left = 118.0
margin_top = 23.0
margin_right = 223.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
text = "Food Quest"

[node name="Mid" type="CenterContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_right = 0.200012
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Mid"]
margin_left = 131.0
margin_top = 16.0
margin_right = 209.0
margin_bottom = 127.0

[node name="Play" type="Button" parent="Mid/VBoxContainer"]
margin_right = 78.0
margin_bottom = 19.0
focus_neighbour_top = NodePath("../Quit")
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Mid/VBoxContainer"]
margin_top = 23.0
margin_right = 78.0
margin_bottom = 42.0
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScores" type="Button" parent="Mid/VBoxContainer"]
margin_top = 46.0
margin_right = 78.0
margin_bottom = 65.0
text = "Highscores"

[node name="Credits" type="Button" parent="Mid/VBoxContainer"]
margin_top = 69.0
margin_right = 78.0
margin_bottom = 88.0
text = "Credits"

[node name="Quit" type="Button" parent="Mid/VBoxContainer"]
margin_top = 92.0
margin_right = 78.0
margin_bottom = 111.0
focus_neighbour_bottom = NodePath("../Play")
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bot" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_right = 0.200012
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Label" parent="Bot"]
margin_left = 118.0
margin_top = 12.0
margin_right = 222.0
margin_bottom = 22.0
text = "2020 : MÃ¡rcio Medeiros"
[connection signal="pressed" from="Mid/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Mid/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Mid/VBoxContainer/HighScores" to="." method="_on_HighScores_pressed"]
[connection signal="pressed" from="Mid/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Mid/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
